fixing docker behaviour